--- a/fpl/static/css/styles.css
+++ b/fpl/static/css/styles.css
@@ -1,315 +1,217 @@
 
 
+:root{
+    --color-bg: #FFDEAD;
+    --white-smoke:  #F5F5F5;
+    --color-primary: #7380ec;
+    --color-danger:  #ff7782;
+    --color-success:  #41f1b6;
+    --color-warning: #ffbb55;
+    --color-white:  #fff;
+    --color-info-dark:  #7d8da1;
+    --color-info-light:  #dce1eb;
+    --color-dark: #363949;
+    --color-light:  rgba(132,139,200,0.18);
+    --color-primary-variant: #111e88;
+    --color-dark-variant: #677483;
+    --color-background: #f6f6f9;
 
+    --card-border-radius:  2rem;
+    --border-radius-1:  0.4rem;
+    --border-radius-2:  0.8rem;
+    --border-radius-3:  1.2rem;
 
+    --card-padding:  2rem;
+    --padding: 1.2rem;
 
+    --box-shadow: 0 2rem 3rem var(--color-light);
+}
 
-
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
 
 .main {
-   background-color: black;
+   background-color:grey;
     height: 100vh;
-    position: relative;
+    display: block;
+    
+
 
 }
 
+.header{
+   display: block;
+   align-items: center;
+   justify-content: center;
+    
 
-
-.background {
-    height: 100vh;
-    margin-left: 200px ;
-    top: 0;
-    left: 0;
-    position: relative;
-}
-
-.goalkeeper{
-    position: absolute;
-    top: 9px;
-    left: 462px;
-
-}
-.gk{
-    position: absolute;
-    max-width: 90px;
+    overflow: auto;
+    border-radius: 25px;
+  
+    margin-top: 10px;
    
 }
-.img{
-    width: 90px;
+.header h2{
+    color: black;
+    display: block;
+    margin: auto;
+    font-size: 50px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 90px;
 }
-.defenders {
+
+.info{
+    display: block;
+    width: 100%;
+    height: auto;
+    overflow: auto;
+}
+.verse{
+    display: block;
+   
+    overflow: auto;
+    float: right;
+    margin-top: 10px;
+    border-radius: 25px;
+    width: 335px;
+    height: fit-content;
+
+}
+.verse h2{
+    color: darkred;
+}
+
+.explanation{
+    float: left;
+   margin-top: 10px;
+
+    overflow: auto;
+    border-radius: 25px;
+    width: 600px;
+    height: fit-content;
+   
+
+}
+
+
+
+
+
+
+.recent-orders {
+    margin-top: 2rem;
+    display: block;
+}
+
+.recent-orders h2{
+    text-align: center;
+}
+
+
+.recent-orders table{
+    
+    width: 100%;
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+    text-align: center;
+    box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
+}
+
+.recent-orders table:hover{
+    box-shadow: none;
+}
+
+table tbody td{
+    height: 2.8rem;
+    border-bottom: 1px solid var(--color light);
+    color:  black;
+}
+
+table tbody tr:last-child td {
+    border: none;
+}
+.formation_name_info, .team_value_info, .ict_form_info, .budget_info{
     position: absolute;
-    top: 181px;
-    left: 314px;
+    left: 50%;
+    top: 0;
+    transform: translateX(-50%);
+    background-color: #000;
+    color: #fff;
+    white-space: nowrap;
+    border-radius: 7px;
+    padding: 10px 15px;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+
 }
-.player_pos{
-    max-width: 90px;
+.formation_name_info::before, .team_value_info::before, .ict_form_info::before, .budget_info::before{
+    content: '';
+    position: absolute;
+    left: 50%;
+    top: 100%;
+    transform: translateX(-50%);
+    border: 15px solid;
+    border-color: #000 #0000 #0000 #0000;
+
+}
+
+
+#help1, #help2, #help3, #help4{
+  position: relative;
+  cursor: pointer;
+
+
+}
+
+#help1:hover .formation_name_info{
+    top: -130%;
+    visibility: visible;
+    opacity: 1;
+}
+
+#help2:hover .team_value_info{
+    top: -130%;
+    visibility: visible;
+    opacity: 1;
+}
+
+#help3:hover .ict_form_info{
+    top: -130%;
+    visibility: visible;
+    opacity: 1;
+    font-size: 10px;
+}
+
+#help4:hover .budget_info{
+    top: -130%;
+    visibility: visible;
+    opacity: 1;
+    font-size: 10px;
+}
+
+
+
+
+.results{
+    margin-top: 2rem;
+    background-color: grey;
+    width: 100%;
+}
+
+.pos{
     display: inline-block;
     margin: 5px;
 }
 
-.midfielders{
-    position: absolute;
-    top: 427px;
-    left: 312px;
-}
-
-.forwards{
-    position: absolute;
-    top: 670px;
-    left: 411px;
-}
-
-}
-/***---------------------------------------------------------------------------------------------------------***/
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-
-.main {
-   background-color: black;
-    height: 100vh;
-    position: relative;
-
-}
-
-
-
-.background {
-    height: 100vh;
-    margin-left: 200px ;
-    top: 0;
-    left: 0;
-    position: relative;
-}
-
-.goalkeeper{
-    position: absolute;
-    top: 9px;
-    left: 462px;
-
-}
-.gk{
-    position: absolute;
-    max-width: 90px;
-   
-}
-.img{
-    width: 90px;
-}
-.defenders {
-    position: absolute;
-    top: 181px;
-    left: 314px;
-}
-.player_pos{
-    max-width: 90px;
-    display: inline-block;
-    margin: 5px;
-}
-
-.midfielders{
-    position: absolute;
-    top: 427px;
-    left: 312px;
-}
-
-.forwards{
-    position: absolute;
-    top: 670px;
-    left: 411px;
-}
-}
-/***---------------------------------------------------------------------------------------------------------***/
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-p{
-    font-size: 60px;
+.formation_name{
+    text-align: center;
 }
 
 .price{
     color: darkred;
 }
-.main {
-   background-color: black;
-    height: 185vh;
-    width: 185vh;
 
-    position: relative;
-
-}
-
-
-
-.background {
-    height: 161vh;
-    width: 75vh;
-    top: 0;
-    left: 190px;
-    position: relative;
-}
-
-.goalkeeper{
-    position: absolute;
-    top: 50px;
-    left: 1025px;
-
-}
-.gk{
-    position: absolute;
-    max-width: 90px;
-   
-}
-.img{
-    width: 310px;
-}
-.defenders {
-    position: absolute;
-    top: 650px;
-    left: 447px;
-}
-.player_pos{
-    max-width: 95px;
+.help{
     display: inline-block;
-    margin: 100px;
-}
-
-.midfielders{
-    position: absolute;
-    top: 1560px;
-    left: 450px;
-}
-
-.forwards{
-    position: absolute;
-    top: 2485px;
-    left: 770px;
-}
-}
-/***---------------------------------------------------------------------------------------------------------***/
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-
-.main {
-   background-color: black;
-    height: 100vh;
-    position: relative;
-
-}
-
-
-
-.background {
-    height: 100vh;
-    margin-left: 200px ;
-    top: 0;
-    left: 0;
-    position: relative;
-}
-
-.goalkeeper{
-    position: absolute;
-    top: 9px;
-    left: 462px;
-
-}
-.gk{
-    position: absolute;
-    max-width: 90px;
-   
-}
-.img{
-    width: 90px;
-}
-
-.defenders {
-    position: absolute;
-    top: 181px;
-    left: 314px;
-}
-.player_pos{
-    max-width: 90px;
-    display: inline-block;
-    margin: 5px;
-}
-
-.midfielders{
-    position: absolute;
-    top: 427px;
-    left: 312px;
-}
-
-.forwards{
-    position: absolute;
-    top: 670px;
-    left: 411px;
-}}
-
-
-
-
-/***---------------------------------------------------------------------------------------------------------***/
-
-
-@media screen and (min-width: 1200px){
-
-.main {
-   background-color: black;
-    height: 100vh;
-    position: relative;
-
-}
-p{
-    font-size: 30px;
-}
-
-
-.background {
-    height: 150vh;
-    width: 85vh;
-    
-    top: 0;
-    left: 135px;
-    position: relative;
-}
-
-.goalkeeper{
-    position: absolute;
-    top: 9px;
-    left: 640px;
-
-}
-.gk{
-    position: absolute;
-    max-width: 90px;
-   
-}
-
-.img{
-    width: 90px;
-}
-.defenders {
-    position: absolute;
-    top: 265px;
-    left: 425px;
-}
-.player_pos{
-    max-width: 90px;
-    display: inline-block;
-    margin: 20px;
-}
-
-.midfielders{
-    position: absolute;
-    top: 622px;
-    left: 450px;
-}
-
-.forwards{
-    position: absolute;
-    top: 985px;
-    left: 555px;
-}
-
 }
