--- a/fpl/templates/index.html
+++ b/fpl/templates/index.html
@@ -13,14 +13,70 @@
   gtag('config', 'G-D2PR0K08RF');
 </script>
 
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 </head>
 <body>	
+	
 
 
 	<div class="main">
-		<h2>FPL CHEAT</h2>
-			<img class='background' src="{{ url_for('static', filename='/images/field.png') }}">
-			<div class="goalkeeper">
+		<div class="header">
+			<h2>FPL CHEAT CODE BOT</h2>
+		</div>
+
+		<div class="info">
+				<div class="verse">
+			<h2>{{verse}} </h2>
+			
+		</div>
+
+		<div class="explanation">
+			<h3>This is a live Bot that chooses the best available(Injury free) players to start in your FPL team based on ICT (Influence, Creativity, Threat) and Form for all FPL Formations.It follows all the FPL rules( 3 players max from a particular team, budget of £100M, etc).This only picks the starting 11, Use the remaining budget to pick your bench.</h3>
+			
+		</div>
+		</div>
+
+	
+
+		<div class="recent-orders">
+				<h2> Formation Summary</h2>
+				<table>
+					<thead>
+						<tr>
+							<th>formation_name <div id='help1'class="help"><span class="formation_name_info">The name of the Formation</span><span class="material-symbols-outlined">help</span></div></th>
+							<th>£Team_value    <div id='help2' class="help"><span class="team_value_info">The monetary value of the Team  from the live transfer market in £</span><span class="material-symbols-outlined">help</span></div></th>
+							<th> ICT_Form    <div id="help3" class="help"><span class="ict_form_info">Statistical index developed specifically to assess a player as an FPL asset, combining Influence, Creativity and Threat scores and Form is a player’s average score per match, calculated from all matches played by his club in the last 30 days.</span><span class="material-symbols-outlined">help</span></div></th>
+							<th>Remaining Budget    <div id="help4" class="help"><span class="budget_info">The money to spend on your bench players</span><span class="material-symbols-outlined">help</span></div></th>
+
+							
+						</tr>
+
+					</thead>
+					<tbody>
+						{%for x in formations %}
+						<tr>
+							<td> {{x['name']}}</td>
+							<td> {{x['value']}}</td>
+							<td> {{x['ict_form']}}</td>
+							<td> {{x['budget']}}</td>
+							
+						</tr>
+				{% endfor %}
+
+					</tbody>
+				</table>
+		</div>
+
+
+
+
+		<div class="results">
+
+			<div class="formation">
+				<h2 class="formation_name">FORMATION:442</h2>
+			<div class="player">
+				<h2>Goalkeeper</h2>
 				{% for x in f442['GK'] %}
 				<div class="gk">
 					<img class='img' src="{{ x['team_shirt'] }}">
@@ -29,41 +85,297 @@
 				</div>	
 			{% endfor %}
 
+				
+			</div>
+				<div class="player">
+				<h3>DEFENDER</h3>
+				{% for x in f442['DEF'] %}
+				<div class="pos">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
+				
+			</div>
+			<div class="player">
+				<h3>MIDFIELDER</h3>
+				{% for x in f442['MID'] %}
+				<div class="pos">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
+				
+			</div>
+
+			<div class="player">
+				<h3>FORWARDS</h3>
+				{% for x in f442['FOW'] %}
+				<div class="pos">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
+				
+			</div>
 			</div>
 			
-			<div class="defenders">
-				{% for x in range(0,4) %}
-					<div class="player_pos">
-						<img class='img' src="{{ f442['DEF'][x]['team_shirt'] }}">
-					<b><p> {{f442['DEF'][x]['name']}}</p></b>
-					<b><p class="price"> £{{f442['DEF'][x]['now_cost']}}</p></b>
-					</div>
+			<hr>
+
+<!------------------------------------------ formation 2 ------------------------------------------------------------------->
+	<div class="formation">
+				<h2 class="formation_name">FORMATION:451</h2>
+			<div class="player">
+				<h2>Goalkeeper</h2>
+				{% for x in f451['GK'] %}
+				<div class="gk">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
 				
-				{% endfor %}
 			</div>
-			<div class="midfielders">
-				{% for x in range(0,4) %}
-					<div class="player_pos">
-						<img class='img' src="{{ f442['MID'][x]['team_shirt'] }}">
-					<b><p> {{f442['MID'][x]['name']}}</p></b>
-					<b><p class="price"> £{{f442['MID'][x]['now_cost']}}</p></b>
-					</div>
+				<div class="player">
+				<h3>DEFENDER</h3>
+				{% for x in f451['DEF'] %}
+				<div class="pos">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
 				
-				{% endfor %}
 			</div>
-			<div class="forwards">
-				{% for x in range(0,2) %}
-					<div class="player_pos">
-						<img class='img' src="{{ f442['FOW'][x]['team_shirt'] }}">
-					<b><p> {{f442['FOW'][x]['name']}}</p></b>
-					<b><p class="price"> £{{(f442['FOW'][x]['now_cost'])|safe}}</p></b>
-					</div>
+			<div class="player">
+				<h3>MIDFIELDER</h3>
+				{% for x in f451['MID'] %}
+				<div class="pos">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
 				
-				{% endfor %}
+			</div>
+
+			<div class="player">
+				<h3>FORWARDS</h3>
+				{% for x in f451['FOW'] %}
+				<div class="pos">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
+				
+			</div>
+			</div>
+<hr>
+		<!------------------------------------------ formation 3 ------------------------------------------------------------------->
+	<div class="formation">
+				<h2 class="formation_name">FORMATION:433</h2>
+			<div class="player">
+				<h2>Goalkeeper</h2>
+				{% for x in f433['GK'] %}
+				<div class="gk">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
+				
+			</div>
+				<div class="player">
+				<h3>DEFENDER</h3>
+				{% for x in f433['DEF'] %}
+				<div class="pos">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
+				
+			</div>
+			<div class="player">
+				<h3>MIDFIELDER</h3>
+				{% for x in f433['MID'] %}
+				<div class="pos">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
+				
+			</div>
+
+			<div class="player">
+				<h3>FORWARDS</h3>
+				{% for x in f433['FOW'] %}
+				<div class="pos">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
+				
+			</div>
+			</div>
+
+			<hr>
+	<!------------------------------------------ formation 4 ------------------------------------------------------------------->
+	<div class="formation">
+				<h2 class="formation_name">FORMATION:532</h2>
+			<div class="player">
+				<h2>Goalkeeper</h2>
+				{% for x in f532['GK'] %}
+				<div class="gk">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
+				
+			</div>
+				<div class="player">
+				<h3>DEFENDER</h3>
+				{% for x in f532['DEF'] %}
+				<div class="pos">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
+				
+			</div>
+			<div class="player">
+				<h3>MIDFIELDER</h3>
+				{% for x in f532['MID'] %}
+				<div class="pos">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
+				
+			</div>
+
+			<div class="player">
+				<h3>FORWARDS</h3>
+				{% for x in f532['FOW'] %}
+				<div class="pos">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
+				
+			</div>
+			</div>
+<hr>
+			<!------------------------------------------ formation 4 ------------------------------------------------------------------->
+	<div class="formation">
+				<h2 class="formation_name">FORMATION:352</h2>
+			<div class="player">
+				<h2>Goalkeeper</h2>
+				{% for x in f352['GK'] %}
+				<div class="gk">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
+				
+			</div>
+				<div class="player">
+				<h3>DEFENDER</h3>
+				{% for x in f352['DEF'] %}
+				<div class="pos">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
+				
+			</div>
+			<div class="player">
+				<h3>MIDFIELDER</h3>
+				{% for x in f352['MID'] %}
+				<div class="pos">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
+				
+			</div>
+
+			<div class="player">
+				<h3>FORWARDS</h3>
+				{% for x in f352['FOW'] %}
+				<div class="pos">
+					<img class='img' src="{{ x['team_shirt'] }}">
+				<b><p> {{x['name']}}</p></b>
+				<b><p class="price">£{{x['now_cost']}}</p></b>
+				</div>	
+			{% endfor %}
+
+				
+			</div>
 			</div>
 			
+			
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 		</div>
 
+
+
+
+
+
+		
+			
+		
+
+			
+		</div>
 		
 </body>
 </html>
