--- a/fpl/static/css/styles.css
+++ b/fpl/static/css/styles.css
@@ -238,3 +238,9 @@ table tbody tr:last-child td {
 .player h3{
     color: darkmagenta;
 }
+
+.footer{
+    text-align: center;
+    color: darkorange;
+    font-weight: bold;
+}
