--- a/fpl/templates/index.html
+++ b/fpl/templates/index.html
@@ -379,8 +379,10 @@
 			
 		
 
-			
+				
+		<p class="footer">Created by Yemisi AKA Santan Dave AKA SAINT. © 2022 SEPTEMBER</p>
+
 		</div>
-		
+
 </body>
 </html>
