--- a/fpl/static/css/styles.css
+++ b/fpl/static/css/styles.css
@@ -60,7 +60,36 @@ body{
     vertical-align: middle;
     line-height: 90px;
 }
+nav{
+    display: block;
+    align-items: center;
+    justify-content: space-between;
 
+}
+
+nav ul li{
+    list-style-type: none;
+    display: inline-block;
+    padding:  10px 25px;
+}
+
+nav ul li a{
+    color: black;
+    font-size: 35px;
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: capitalize;
+
+
+
+
+
+}
+
+nav ul li a:hover{
+    color: darkmagenta;
+    transition: .4s;
+}
 .info{
     display: block;
     width: 100%;
@@ -215,6 +244,13 @@ table tbody tr:last-child td {
     margin: 5px;
 }
 
+.pos img{
+    width: 150px;
+
+}
+.gk img{
+    width: 150px;
+}
 .formation_name{
     text-align: center;
     color: darkmagenta;
