--- a/fpl/templates/index.html
+++ b/fpl/templates/index.html
@@ -40,7 +40,7 @@
 		</div>
 
 		<div class="explanation">
-			<h3>This is an Automatic live Bot that chooses the best available(Injury free) players to start in your FPL team based on ICT (Influence, Creativity, Threat) and Form for all FPL Formations.It follows all the FPL rules (3 players max from a particular team, budget of £100M, etc).This only picks the starting 11, Use the remaining budget to pick your bench.</h3>
+			<h3>This is an Automatic live Program that chooses the best available(Injury free) players to start in your FPL team based on ICT (Influence, Creativity, Threat) and Form for all FPL Formations.It follows all the FPL rules (3 players max from a particular team, budget of £100M, etc).This only picks the starting 11, Use the remaining budget to pick your bench.</h3>
 			
 		</div>
 		</div>
