--- a/fpl/templates/index.html
+++ b/fpl/templates/index.html
@@ -22,12 +22,16 @@
 	<div class="main">
 		<div class="header">
 			<nav>
-				<h2>FPL CHEAT CODE BOT</h2>
-				<hr>
+				
+				
 				<ul>
 					<li><a href="{{url_for('home')}}">Home</a></li>
+					<li><a href="{{url_for('stats')}}">Stats</a></li>
 					<li><a href="{{url_for('help')}}">How It Works</a></li>
+					
 				</ul>
+				<hr>
+				<h2>FPL CHEAT CODE BOT</h2>
 			</nav>
 			
 		</div>
