--- a/fpl/templates/main.html
+++ b/fpl/templates/main.html
@@ -20,7 +20,7 @@
 	<div class="gameweek_info">
 		
 		<div class="deadline">
-			<p>The Deadline is {{gameweek_info['deadline_time']}} uk time</h3>
+			<p>The Deadline is {{gameweek_info['deadline_time']}} UK time</h3>
 		</div>
 		{% for x in gameweek_info['chip_plays']%}
 		<div class="chips" id={{x['chip_name']}}>
