--- a/fpl/static/css/styles.css
+++ b/fpl/static/css/styles.css
@@ -38,6 +38,7 @@ body{
     background-color:grey;
     height: 100vh;
     display: block;
+
     
 
 
@@ -64,6 +65,11 @@ body{
     vertical-align: middle;
     line-height: 90px;
 }
+.webpage_header{
+    background-color: dimgray;
+    margin: 20px;
+
+}
 nav{
     display: block;
     align-items: center;
@@ -71,7 +77,7 @@ nav{
 
 }
 nav ul{
-    background-color: dimgray;
+    background-color: darkgray;
     margin: 25px;
 }
 
@@ -145,6 +151,8 @@ nav ul li a:hover{
     text-align: center;
     display: block;
     font-size: 30px;
+    background-color: dimgray;
+    margin: 20px;
 }
 .deadline{
     display: inline-block;
@@ -167,7 +175,8 @@ nav ul li a:hover{
 
 
 .recent-orders {
-    margin-top: 2rem;
+    margin: 20px;
+    background-color: dimgray;
     display: block;
 }
 
@@ -276,11 +285,13 @@ table tbody tr:last-child td {
     margin-top: 2rem;
     background-color: grey;
     width: 100%;
+    margin: 15px;
 }
 
 .pos{
     display: inline-block;
     margin: 5px;
+    background-color: dimgray;
 }
 
 .pos img{
@@ -294,11 +305,18 @@ table tbody tr:last-child td {
     text-align: center;
     color: black;
     font-size: 30px;
+    width: 100%;
+    margin: 15px;
+    background-color: dimgray;
 }
 
 .captain_name{
     text-align: center;
     color: darkmagenta;
+    background-color: darkgray;
+    margin-left: 40px;
+    margin-right: 40px;
+
 }
 
 .price{
@@ -321,6 +339,7 @@ table tbody tr:last-child td {
 .main_help_info img{
     max-width: 100%;
     height: 500px;
+    margin: 20px;
 
 }
 .help_main_info p{
@@ -329,7 +348,10 @@ table tbody tr:last-child td {
 
 }
 
-
+.help_main_info {
+    background-color: dimgray;
+    margin: 20px;
+}
 .help_main_info a{
     color: darkmagenta;
     text-decoration: none;
@@ -340,13 +362,10 @@ table tbody tr:last-child td {
     text-decoration: underline;
 }
 
-.influence h2{
-    font-size: 33px ;
-}
 
-.influence p{
-    line-height: 2.5;
-    font-size: 20px;
+.influence {
+    background-color: dimgray;
+    margin: 20px;
 }
 
 
@@ -359,7 +378,10 @@ table tbody tr:last-child td {
     font-size: 20px;
 }
 
-
+.creativity {
+    background-color: dimgray;
+    margin: 20px;
+}
 .creativity h2{
     font-size: 33px ;
 }
@@ -369,7 +391,10 @@ table tbody tr:last-child td {
     font-size: 20px;
 }
 
-
+.threat {
+    background-color: dimgray;
+    margin: 20px;
+}
 .threat h2{
     font-size: 33px ;
 }
@@ -379,7 +404,10 @@ table tbody tr:last-child td {
     font-size: 20px;
 }
 
-
+.overall {
+    background-color: dimgray;
+    margin: 20px;
+}
 
 .overall h2{
     font-size: 33px ;
@@ -399,7 +427,7 @@ table tbody tr:last-child td {
 
 }
 
-//***********************************************************************************STATS****/
+//***********************************************************************************STATS*************************************/
 
 
 *, *:before, *:after {
@@ -437,6 +465,8 @@ h1,h2,h3,h4,h5,h6 {
     width:100%;
     border:1px solid $color-form-highlight;
     display: block;
+    background-color: dimgray;
+    margin: 10px;
 }
 .table_head_info{
     font-size: 30px;
@@ -476,6 +506,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 .footer{
     text-align: center;
-    color: darkorange;
+    color: darkmagenta;
+    font-size: 25px;
     font-weight: bold;
 }
