--- a/fpl/templates/index.html
+++ b/fpl/templates/index.html
@@ -31,7 +31,10 @@
 					
 				</ul>
 				<hr>
-				<h2>FPL CHEAT CODE BOT</h2>
+				<div class="webpage_header">
+					<h2>FPL CHEAT CODE BOT</h2>
+				</div>
+				
 			</nav>
 			
 		</div>
