--- a/fpl/templates/index.html
+++ b/fpl/templates/index.html
@@ -28,6 +28,7 @@
 					<li><a href="{{url_for('home')}}">Home</a></li>
 					<li><a href="{{url_for('stats')}}">Stats</a></li>
 					<li><a href="{{url_for('help')}}">How It Works</a></li>
+					<li><a href="https://yemisi-portfolio.herokuapp.com/" target="_blank"  >Contact Me</a></li>
 					
 				</ul>
 				<hr>
