--- a/fpl/templates/index.html
+++ b/fpl/templates/index.html
@@ -26,15 +26,14 @@
 				
 				<ul>
 					<li><a href="{{url_for('home')}}">Home</a></li>
+					<li><a href="{{url_for('news')}}">News</a></li>
 					<li><a href="{{url_for('stats')}}">Stats</a></li>
 					<li><a href="{{url_for('help')}}">How It Works</a></li>
 					<li><a href="https://yemisi-portfolio.herokuapp.com/" target="_blank"  >Contact Me</a></li>
 					
 				</ul>
-				<hr>
-				<div class="webpage_header">
-					<h2>FPL CHEAT CODE BOT</h2>
-				</div>
+				
+				
 				
 			</nav>
 			
@@ -52,9 +51,13 @@
 		
 
 				
+	<div class="footer-div">
 		
 <p class="footer">Created by Yemisi. © 2022 SEPTEMBER</p>
-		</div>
+	</div>
+
+
+	</div>
 
 
 </body>
