--- a/fpl/templates/main.html
+++ b/fpl/templates/main.html
@@ -1,5 +1,9 @@
 {% extends 'index.html' %}
 {% block maincontent %}
+		<div class="webpage_header">
+					<h2>FPL CHEAT CODE BOT</h2>
+				</div>
+		<hr>
 		<div class="info">
 				<div class="verse">
 			<h2>{{verse}} </h2>
