--- a/fpl/templates/news.html
+++ b/fpl/templates/news.html
@@ -9,7 +9,7 @@
 
 	<div class="each_news">
 		<div class="pos">
-			<b><p> {{x['time']}}</p></b>
+			<b><p> Time: {{x['time']}}</p></b>
 				<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
 				<b><p class="price">{{x['news']}}</p></b>
