--- a/fpl/templates/main.html
+++ b/fpl/templates/main.html
@@ -1,9 +1,13 @@
 {% extends 'index.html' %}
 {% block maincontent %}
-		<div class="webpage_header">
+<div class="webpage_header">
 					<h2>FPL CHEAT CODE BOT</h2>
-				</div>
+		</div>
 		<hr>
+<div class="main-body">
+	
+
+		
 		<div class="info">
 				<div class="verse">
 			<h2>{{verse}} </h2>
@@ -32,6 +36,7 @@
 		</div>
 		{% endfor %}
 	</div>
+	
 	<hr>
 
 		<div class="recent-orders">
@@ -62,7 +67,7 @@
 					</tbody>
 				</table>
 		</div>
-
+</div>
 
 			<hr>
 
@@ -77,8 +82,11 @@
 				<div class="pos">
 				<div class="gk">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
-				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> {{x['name']}}</p></b>	
+				<b><p> Transfer in:{{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out:{{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by:{{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			</div>
 			{% endfor %}
@@ -91,7 +99,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -103,7 +114,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -116,7 +130,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -137,7 +154,10 @@
 				<div class="gk">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>
 				</div>	
 			{% endfor %}
@@ -150,7 +170,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -162,7 +185,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -175,7 +201,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -194,7 +223,10 @@
 				<div class="gk">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>
 					</div>
 			{% endfor %}
@@ -207,7 +239,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -219,7 +254,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -232,7 +270,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -252,7 +293,10 @@
 				<div class="gk">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			</div>
 			{% endfor %}
@@ -265,7 +309,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -277,7 +324,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -290,7 +340,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -309,7 +362,10 @@
 				<div class="gk">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			</div>
 			{% endfor %}
@@ -322,7 +378,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -334,7 +393,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -347,7 +409,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -369,7 +434,10 @@
 					<div class="gk">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>
 				</div>
 					
@@ -383,7 +451,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -394,8 +465,10 @@
 				{% for x in f343['MID'] %}
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
-				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
@@ -408,7 +481,10 @@
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
 				<b><p> {{x['name']}}</p></b>
-				<b><p class="price">£{{x['now_cost']}}</p></b>
+				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
+				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
+				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
+				<b><p class="price">Price: £{{x['now_cost']}}</p></b>
 				</div>	
 			{% endfor %}
 
