--- a/fpl/templates/help.html
+++ b/fpl/templates/help.html
@@ -1,5 +1,9 @@
 {% extends 'index.html' %}
 {% block maincontent %}
+<div class="webpage_header">
+					<h2>HOW DOES IT WORK?</h2>
+		</div>
+		<hr>
 <div class="main_help_info">
 	<img src="../static/images/img2.jpg">
 	<div class="help_main_info">
