--- a/fpl/templates/news.html
+++ b/fpl/templates/news.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 {% block maincontent %}
 <div class="webpage_header">
-					<h2>Latest Player News</h2>
+					<h2>LATEST PLAYER NEWS</h2>
 		</div>
 <hr>
 <div class="news_container">
