--- a/fpl/templates/stats.html
+++ b/fpl/templates/stats.html
@@ -1,6 +1,9 @@
 {% extends 'index.html' %}
 {% block maincontent %}
-
+<div class="webpage_header">
+					<h2>STATISTICS</h2>
+		</div>
+		<hr>
 <div class="container">
 	<div class="help_main_info xg">
 			<p >
